...
                <TextView
                    android:id="@+id/meeting_tv_information"
                    android:padding="16dp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toEndOf="@id/meeting_iv_logo_of_meeting"
                    app:layout_constraintEnd_toStartOf="@id/meeting_iv_delete_meeting"
                    app:layout_constraintTop_toTopOf="@id/meeting_cl_constraint_layout"
                    android:text="@string/subjet_hour_date_room">
                </TextView>

                <!-- PARTICIPANT -->
                <TextView
...
